--- a/package.xml
+++ b/package.xml
@@ -7,20 +7,17 @@
   <maintainer email="yeojun0702@gmail.com">airon</maintainer>
   <license>TODO: License declaration</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+    <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>rclcpp</depend>
- <buildtool_depend>rosidl_default_generators</buildtool_depend>
-  <exec_depend>builtin_interfaces</exec_depend>
-  <exec_depend>rosidl_default_runtime</exec_depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <depend>std_msgs</depend>
 
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
- <member_of_group>rosidl_interface_packages</member_of_group>
+  
 
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <architecture_independent/>
   </export>
 </package>
